--- a/examples/simulcast/config.toml
+++ b/examples/simulcast/config.toml
@@ -3,7 +3,7 @@
 subrembfeedback = false
 # Limit the remb bandwidth in kbps
 # zero means no limits
-maxbandwidth = 400
+maxbandwidth = 7000
 # Rate limit nack packets from senders to 1 nack per maxNackTime in seconds
 # zero means no rate limit
 maxnacktime = 1
@@ -23,8 +23,8 @@ maxbuffertime = 1000
 # Format: [min, max]   and max - min >= 100
 # portrange = [50000, 60000]
 # if sfu behind nat, set iceserver
-# [[webrtc.iceserver]]
-# urls = ["stun:stun.stunprotocol.org:3478"]
+[[webrtc.iceserver]]
+urls = ["stun:stun.stunprotocol.org:3478"]
 # [[webrtc.iceserver]]
 # urls = ["turn:turn.awsome.org:3478"]
 # username = "awsome"
@@ -42,6 +42,6 @@ maxbuffertime = 1000
 # nat1to1 = ["1.2.3.4"]
 
 [log]
-stats = true
+stats = false
 level = "debug"
 fix = ["proc.go", "asm_amd64.s", "jsonrpc2.go"]
